# macutils

./: .gitignore  README  makefile  meson.build
binhex/: binhex.c  dofile.c  dofile.h  makefile
comm/: frommac.c  globals.h  makefile  tomac.c  tty.c  tty.h  xm_from.c  xm_from.h  xm_to.c  xm_to.h
crc/: .gitignore  arc.c  binhex.c  ccitt.c  ccitt32.c  crc.h  kermit.c  makecrc  makecrc.c  makefile  zip.c
fileio/: makefile  rdfile.c  rdfile.h  rdfileopt.h  wrfile.c  wrfile.h  wrfileopt.h
hexbin/: buffer.c  buffer.h  crc.c  crc.h  dl.c  dl.h  globals.c  globals.h  hecx.c  hecx.h  hexbin.c  hqx.c  hqx.h  makefile  mu.c  mu.h  printhdr.c  printhdr.h  readline.c  readline.h
macunpack/: arc.h  bin.c  bin.h  bits_be.c  bits_be.h  cpt.c  cpt.h  crc.c  crc.h  dd.c  dd.h  de_compress.c  de_compress.h  de_huffman.c  de_huffman.h  de_lzah.c  de_lzah.h  de_lzh.c  dia.c  dia.h  dir.c  dir.h  globals.c  globals.h  huffman.h  jdw.c  jdw.h  lzc.c  lzc.h  lzh.c  lzh.h  macbinary.c  macbinary.h  macunpack.c  makefile  mcb.c  mcb.h  pit.c  pit.h  sit.c  (+5 more)
mixed/: dir.c  dir.h  globals.h  macbinary.c  macbinary.h  macsave.c  macstream.c  makefile  mcb.c  mcb.h
util/: backtrans.c  backtrans.h  curtime.h  transname.c  transname.h  util.c  util.h
